--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-.App {
-  color: white;
-  text-align: center;
-}
-
-.container {
-  width: 15rem;
-  height: 15rem;
-  background-color: green;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
