--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,9 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #999;
 }
+
+/* Show arrows for number inputs */
+input[type='number']::-webkit-inner-spin-button, 
+input[type='number']::-webkit-outer-spin-button { 
+    opacity: 1;
+}
